--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     </licenses>
     <groupId>io.github.sebivenlo</groupId>
     <artifactId>testeasypom</artifactId>
-    <version>4.0.4</version>
+    <version>4.0.5</version>
     <packaging>pom</packaging>
     <name>SEBIVenlo :: TestEasyPom</name>
     <url>https://sebivenlo.github.io/testeasypom/</url>
@@ -118,8 +118,14 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.3.0</version>
+                    <version>3.3.1</version>
                 </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <!--<version>3.0.0</version>-->
+                    </plugin>                
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -943,13 +949,24 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>3.0.0</version>
+                        <!--<version>3.0.0</version>-->
                         <configuration>
                             <executable>java</executable>
                             <arguments>
                                 <argument>--enable-preview</argument>
                                 <argument>${exec.mainClass}</argument>
                             </arguments>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <!--<version>3.3.1</version>-->
+                        <configuration>
+                            <additionalOptions>
+                                --enable-preview --allow-script-in-comments
+                            </additionalOptions>
+                            <release>17</release>
                         </configuration>
                     </plugin>
                 </plugins>
